feat(auth): Google OAuth ID Token 인증 구현
- Google One Tap을 통한 ID Token 기반 인증 방식 구현
- GoogleIdTokenVerifier를 사용한 ID Token 검증 추가
- 사용자 정보 추출 및 자동 회원가입 로직 구현
- JWT Access Token 발급 (1시간 유효)
- SecurityConfig에서 /api/v1/auth/** 경로 인증 제외 설정
- Swagger API 문서 상세화 (인증 플로우, 응답 예시)

🤖 Generated with [Claude Code](https://claude.com/claude-code)

Co-Authored-By: Claude <noreply@anthropic.com>